samples/_failures_safe/1761075346_313aa3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ada18352.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ada18352.c:173:5: error: expected declaration or statement at end of input
  173 |     }
      |     ^
